package br.com.rblemer.pipocaflix

object TestTags {

    const val BOTTOM_NAV_SEARCH = "BOTTOM_NAV_SEARCH"
    const val BOTTOM_NAV_HOME = "BOTTOM_NAV_HOME"
    const val BOTTOM_NAV_FAVORITE = "BOTTOM_NAV_FAVORITE"

    const val PREF_FILE_NAME = "userData"

    const val SEARCH_TEXT_FIELD = "SEARCH_TEXT_FIELD"
    const val MOVIE_ITEM = "MOVIE_ITEM"

    const val ADD_TO_FAVORITES_BUTTON = "ADD_TO_FAVORITES_BUTTON"
}